--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,6 +72,7 @@ html {
   background-color: #FFF;
   border-radius: 1rem;
   box-shadow: 0 0 1.25rem var(--highlight-color);
+  transform: translateZ(0); // Needed for Safari to correctly overflow with "border-radius" over "leaflet" map
 }
 
 .card__header {
