--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -12,7 +12,7 @@
         <input class="form__input" type="text" placeholder="Email" id="email" [(ngModel)]="email" name="email" required >
       </div>
       <div class="form__group">
-        <input class="form__input" type="text" placeholder="Password" id="password" [(ngModel)]="password" name="password" required>
+        <input class="form__input" type="password" placeholder="Password" id="password" [(ngModel)]="password" name="password" required>
       </div>
       <div class="form__group">
         <button
