Form labels added and form styles modified

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: #FFF;
-    box-shadow: 0 0 2rem var(--highlight-color);
+    box-shadow: 0 0 2rem var(--shadow-color);
     padding: .875rem 1rem;
 }
 
