--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,10 +15,12 @@ html {
   --text-secondary-color: #8087AE;
   --link-color: #FF3A82;
   --border-color: #F6F6F6;
-  --highlight-color: rgba(0, 0, 255, .1);
-  --input-shadow-color: rgba(0, 0, 255, .3);
-  --input-invalid-shadow-color: rgba(255, 0, 128, .3);
-  --overlay-color: rgba(12, 16, 102, .3);
+  --shadow-color: rgba(0, 0, 128, .1);
+  --input-border-color: rgba(64, 48, 128, 0.2);
+  --input-focus-color: rgba(64, 48, 228, 0.4);
+  --input-invalid-color: rgba(255, 64, 128, 1);
+  --input-invalid-shadow-color: rgba(255, 64, 128, .3);
+  --overlay-color: rgba(16, 16, 128, .3);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--text-primary-color);
 }
@@ -29,7 +31,7 @@ html {
   background: none;
   border: none;
   color: #FFF;
-  text-shadow: 0 0 4px var(--highlight-color);
+  text-shadow: 0 0 4px var(--shadow-color);
   outline: none;
   font-size: 1rem;
   padding: 1rem 2rem;
@@ -70,47 +72,73 @@ html {
 .card {
   position: relative;
   background-color: #FFF;
-  border-radius: 1rem;
-  box-shadow: 0 0 1.25rem var(--highlight-color);
+  border-radius: .875rem;
+  box-shadow: 0 0 1.25rem var(--shadow-color);
   transform: translateZ(0); // Needed for Safari to correctly overflow with "border-radius" over "leaflet" map
+}
+
+.card--md {
+  width: 100%;
+  max-width: 400px;
 }
 
 .card__header {
   text-align: center;
-  padding: 2rem 2rem 0;
+  padding: 1.875rem 2.5rem 0;
 }
 
 .card__header--borderless {
   padding: 0;
 }
 
+.card__heading {
+  font-size: 1.75rem;
+}
+
 .card__content {
-  padding: 2rem;
+  padding: 2rem 2.5rem;
+}
+
+.card__header + .card__content {
+  padding-top: 1.5rem;
 }
 
 .form {
   text-align: center;
-  padding: 1rem;
 }
 
 .form__group + .form__group {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
+}
+
+.form__label {
+  display: block;
+  text-align: left;
+  color: var(--text-secondary-color);
+  font-size: 0.875rem;
+  padding: 0 1.25rem;
+  margin-bottom: 0.5rem;
 }
 
 .form__input {
   appearance: none;
   outline: none;
-  border: none;
-  min-width: 220px;
+  border: 1px solid var(--input-border-color);
+  width: 100%;
+  text-overflow: ellipsis;
   font-size: 1rem;
-  padding: 1.125rem 1.5rem;
-  border-radius: 1.75rem;
-  box-shadow: 0 0 2rem var(--input-shadow-color);
+  padding: .875rem 1.25rem;
+  border-radius: 1.5rem;
+  box-shadow: inset 0 0 .5rem var(--shadow-color);
 }
 
 .form__input:focus {
-  border: 1px solid var(--input-shadow-color);
-  padding: calc(1.125rem - 1px) calc(1.5rem - 1px);
+  border: 1px solid var(--input-focus-color);
+}
+
+.form__input--invalid {
+  border: 1px solid var(--input-invalid-color);
+  box-shadow: inset 0 0 .375rem var(--input-invalid-shadow-color);
 }
 
 .form__field {
@@ -131,9 +159,6 @@ html {
   height: 1rem;
   transform: translateY(-50%);
   pointer-events: none;
-  mask-repeat: no-repeat;
-  mask-size: contain;
-  mask-position: 50% 50%;
 }
 
 .form__field--icon-arrow-down::after {
@@ -156,25 +181,21 @@ html {
   background-color: var(--secondary-color);
 }
 
-.form__input--invalid {
-  box-shadow: 0 0 2rem var(--input-invalid-shadow-color);
-}
-
-.form__error {
-  
-}
-
 .form__button {
-  margin-top: 1rem;
-  padding: 1.125rem 3rem;
+  margin-top: .75rem;
+  padding: .875rem 4rem;
 }
 
 /*
   Helper classes
 */
 
+.h-text--sm {
+  font-size: 0.875rem;
+}
+
 .h-mt--sm {
-  margin-top: 1rem;
+  margin-top: .875rem;
 }
 
 .h-text--center {
