--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,6 +82,11 @@ html {
   max-width: 400px;
 }
 
+.card--lg {
+  width: 100%;
+  max-width: 600px;
+}
+
 .card__header {
   text-align: center;
   padding: 1.875rem 2.5rem 0;
