--- a/src/app/views/add-trip/add-trip.component.scss
+++ b/src/app/views/add-trip/add-trip.component.scss
@@ -1,5 +1,5 @@
 .trip {
-    min-width: 60vw;
+    width: 900px;
     padding-right: 60%;
     overflow: hidden;
 }
@@ -11,8 +11,4 @@
     left: 40%;
     right: 0;
     border-left: 1px solid var(--border-color);
-}
-
-.form__input {
-    width: 100%;
 }
