--- a/src/app/views/trips/trips.component.html
+++ b/src/app/views/trips/trips.component.html
@@ -49,7 +49,7 @@
     <ng-container *ngIf="activeTrip">
         <div class="card trip trip--active">
             <div class="card__header">
-                <h1>Your trip</h1>
+                <h1 class="card__heading">Your trip</h1>
             </div>
             <div class="card__content trip__content">
                 <div class="trip__description">
