Trips search parameters implemented

--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -6,6 +6,7 @@
     <form
       class="form"
       #profileForm="ngForm"
+      autocomplete="off"
       (ngSubmit)="onSubmit()"
     >
       <div class="form__group">
